[metadata]
name = rowantree.auth.sdk
version = 0.14.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Authentication and Authorization Service SDK
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic~=1.10
    requests~=2.28
    python-jose~=3.3
    fastapi~=0.81
    starlette~=0.19
    python-jose~=3.3
    bcrypt~=4.0
    passlib~=1.7
    rowantree.common.sdk~=0.4
    rowantree.contracts~=0.12

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
